src/main/default/objects/narrate_NarratorConfig__c/narrate_NarratorConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Narrator Config</label>
</CustomObject>