src/main/default/objects/narrate_NarratorConfig__c/fields/AutoTruncateDays__c.field-meta.xml
<CustomField>
    <fullName>AutoTruncateDays__c</fullName>
    <label>Auto-truncate Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>