src/main/default/objects/narrate_NarratorConfig__c/fields/AutoTruncateMax__c.field-meta.xml
<CustomField>
    <fullName>AutoTruncateMax__c</fullName>
    <label>Auto-truncate Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>