src/main/default/objects/narrate_NarratorConfig__c/fields/EnabledTests__c.field-meta.xml
<CustomField>
    <fullName>EnabledTests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled in Tests</label>
    <type>Checkbox</type>
</CustomField>